# ParSecNova

./: .gitignore  CASCADE.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  ParSec Nova.sln  README.md  build-host.sh  build.sh  export_presets.cfg  fix_runtime.sh  launch.sh  project.csproj  project.godot
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/scripts/: performance_test.gd
.github/workflows/: ci.yml  performance.yml  security.yml
.scripts/: README.md  rebuild-dev-container.sh
assets/: world.json
assets/environments/: default_env.tres
plans/: ai_world_generation_en.md  asset_analysis_modernization_en.md  ecs_json_integration_en.md  godot_technical_requirements_en.md  parsec_analysis_en.md  parsec_remake_plan_en.md
scenes/prototypes/: HeadlessPrototype.tscn  SimplePrototype.tscn  TestScene.tscn
scripts/: TestControls.gd
scripts/ui/: MainMenu.cs
src/: main.rs
src/Core/: SimpleTestControls.cs  TestControls.cs
src/Game/Environment/: SimpleAsteroid.cs
src/Game/Ships/: ShipController.cs  SimpleShip.cs
