[package]
name = "parsec_nova"
version = "0.1.0"
edition = "2021"
authors = ["Markus"]
description = "AI-driven space simulation"

[dependencies]
# Standard Bevy without default features for full control (optional)
# Or just use the standard version:
bevy = { version = "0.14", default-features = false, features = ["bevy_asset", "bevy_winit", "bevy_render", "bevy_core_pipeline", "bevy_sprite", "bevy_text", "bevy_ui", "bevy_pbr", "bevy_gltf", "bevy_scene", "bevy_animation", "bevy_gizmos"] }

# Serialization for your JSON system
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# The "dev" feature enables fast linking during development
dev = ["bevy/dynamic_linking"]

# The "headless" feature disables window and audio features for CI/CD
headless = ["bevy/bevy_core_pipeline", "bevy/bevy_sprite", "bevy/bevy_text", "bevy/bevy_ui", "bevy/bevy_pbr", "bevy/bevy_gltf", "bevy/bevy_scene", "bevy/bevy_animation", "bevy/bevy_gizmos"]

# --- OPTIMIZATIONS ---

# Configuration for "cargo run" (fast compilation, slow execution)
[profile.dev]
opt-level = 1 

# Configuration for dependencies in dev mode 
# (makes the game significantly smoother in debug mode)
[profile.dev.package."*"]
opt-level = 3

# Configuration for "cargo build --release" (slow compilation, maximum performance)
[profile.release]
opt-level = 3
lto = "thin"           # Link-Time Optimization for smaller/faster binaries
codegen-units = 1      # Improves optimization at the cost of build time
panic = 'abort'        # Reduces binary size (no stack unwinding)
strip = true           # Automatically removes debug symbols from binary